--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.2",
-    "bootstrap": "^5.2.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
-    "react-simple-chatbot": "^0.6.1",
+    "react-star-ratings": "^2.3.0",
     "swiper": "^9.0.4"
   },
   "devDependencies": {
