--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-star-ratings": "^2.3.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "swiper": "^9.0.4"
   },
   "devDependencies": {
